--- a/first-website.css
+++ b/first-website.css
@@ -9,7 +9,7 @@ margin: 0;
 }
 section{
     display: flex;
-    
+    padding-bottom: 30px;
 }
 .half-width{
     width: 50%;
@@ -31,4 +31,25 @@ section{
 .top{
     background-image: url(top-banner.png);
     background-repeat: no-repeat
+}
+.ig{
+    display: flex;
+}
+.flexible{
+
+}
+.ammu{
+    width: 90%;
+    display: flex;
+    padding-top: 20px;
+}
+.experience-item{
+    
+    margin-left:2% ;
+    padding-top: 30px;
+    padding-left: 10px;
+    box-shadow: 10px 10px 10px rgb(222, 222, 222);
+}
+.o{
+    padding-bottom: 400px;
 }
